[gd_scene load_steps=11 format=3 uid="uid://deum66em4463u"]

[ext_resource type="PackedScene" uid="uid://8wxqb4n6ovtc" path="res://Player/Player.tscn" id="1_feik4"]
[ext_resource type="Script" path="res://Levels/level.gd" id="1_t23tn"]
[ext_resource type="PackedScene" uid="uid://cv8nqn26byq8a" path="res://Environment/Limits.tscn" id="3_ts8eo"]
[ext_resource type="PackedScene" uid="uid://75qng22wbs5q" path="res://Enemies/BaseEnemies/Enemy1.tscn" id="4_8m3ty"]
[ext_resource type="PackedScene" uid="uid://guvegtvwueq1" path="res://Enemies/HiveMind.tscn" id="4_w2wud"]
[ext_resource type="PackedScene" uid="uid://bcym473i1tnde" path="res://Enemies/BaseEnemies/Enemy2.tscn" id="5_1a6q8"]
[ext_resource type="PackedScene" uid="uid://btkjs8yrmp81d" path="res://Enemies/BaseEnemies/Enemy3.tscn" id="6_occjl"]
[ext_resource type="PackedScene" uid="uid://blvna5d8yx6qg" path="res://Environment/Shelter/Shelter.tscn" id="8_bcmb8"]
[ext_resource type="FontFile" uid="uid://c26hkays5pelt" path="res://Assets/Minecraft.ttf" id="9_bdfl0"]
[ext_resource type="Texture2D" uid="uid://ber7m0atf81wf" path="res://Assets/Sprites/Invaders/space__0006_Player.png" id="10_8oj67"]

[node name="Level" type="Node2D"]
script = ExtResource("1_t23tn")

[node name="Player" parent="." instance=ExtResource("1_feik4")]
position = Vector2(241, 596)

[node name="HiveMind" parent="." instance=ExtResource("4_w2wud")]

[node name="Enemy1_1" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(58, 97)

[node name="Enemy1_2" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(58, 116)

[node name="Enemy1_3" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(78, 97)

[node name="Enemy1_4" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(78, 116)

[node name="Enemy1_5" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(98, 97)

[node name="Enemy1_6" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(98, 116)

[node name="Enemy1_7" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(118, 97)

[node name="Enemy1_8" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(118, 116)

[node name="Enemy1_9" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(138, 97)

[node name="Enemy1_10" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(138, 116)

[node name="Enemy1_11" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(158, 97)

[node name="Enemy1_12" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(158, 116)

[node name="Enemy1_13" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(178, 97)

[node name="Enemy1_14" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(178, 116)

[node name="Enemy1_15" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(199, 97)

[node name="Enemy1_16" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(199, 116)

[node name="Enemy1_17" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(220, 97)

[node name="Enemy1_18" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(220, 116)

[node name="Enemy1_19" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(242, 97)

[node name="Enemy1_20" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(242, 116)

[node name="Enemy1_21" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(263, 97)

[node name="Enemy1_22" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(263, 116)

[node name="Enemy1_23" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(284, 97)

[node name="Enemy1_24" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(284, 116)

[node name="Enemy1_25" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(305, 97)

[node name="Enemy1_26" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(305, 116)

[node name="Enemy1_27" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(325, 97)

[node name="Enemy1_28" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(325, 116)

[node name="Enemy1_29" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(345, 97)

[node name="Enemy1_30" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(345, 116)

[node name="Enemy1_31" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(365, 97)

[node name="Enemy1_32" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(365, 116)

[node name="Enemy1_33" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(385, 97)

[node name="Enemy1_34" parent="HiveMind" instance=ExtResource("4_8m3ty")]
position = Vector2(385, 116)

[node name="Enemy2_1" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(61, 135)

[node name="Enemy2_2" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(61, 153)

[node name="Enemy2_3" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(88, 135)

[node name="Enemy2_4" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(88, 153)

[node name="Enemy2_17" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(278, 135)

[node name="Enemy2_18" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(278, 153)

[node name="Enemy2_19" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(304, 135)

[node name="Enemy2_20" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(304, 153)

[node name="Enemy2_21" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(330, 135)

[node name="Enemy2_22" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(330, 153)

[node name="Enemy2_23" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(382, 135)

[node name="Enemy2_24" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(382, 153)

[node name="Enemy2_25" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(356, 135)

[node name="Enemy2_26" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(356, 153)

[node name="Enemy2_5" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(140, 135)

[node name="Enemy2_6" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(140, 153)

[node name="Enemy2_7" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(114, 135)

[node name="Enemy2_8" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(114, 153)

[node name="Enemy2_9" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(168, 135)

[node name="Enemy2_10" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(168, 153)

[node name="Enemy2_11" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(195, 135)

[node name="Enemy2_12" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(195, 153)

[node name="Enemy2_13" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(251, 135)

[node name="Enemy2_14" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(251, 153)

[node name="Enemy2_15" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(223, 135)

[node name="Enemy2_16" parent="HiveMind" instance=ExtResource("5_1a6q8")]
position = Vector2(223, 153)

[node name="Enemy3_3" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(91, 191)

[node name="Enemy3_4" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(91, 172)

[node name="Enemy3_2" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(62, 191)

[node name="Enemy3_1" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(62, 172)

[node name="Enemy3_5" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(149, 191)

[node name="Enemy3_6" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(149, 172)

[node name="Enemy3_7" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(120, 191)

[node name="Enemy3_8" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(120, 172)

[node name="Enemy3_17" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(323, 191)

[node name="Enemy3_18" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(323, 172)

[node name="Enemy3_19" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(294, 191)

[node name="Enemy3_20" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(294, 172)

[node name="Enemy3_21" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(381, 191)

[node name="Enemy3_22" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(381, 172)

[node name="Enemy3_23" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(352, 191)

[node name="Enemy3_24" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(352, 172)

[node name="Enemy3_9" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(207, 191)

[node name="Enemy3_10" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(207, 172)

[node name="Enemy3_11" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(178, 191)

[node name="Enemy3_12" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(178, 172)

[node name="Enemy3_13" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(265, 191)

[node name="Enemy3_14" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(265, 172)

[node name="Enemy3_15" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(236, 191)

[node name="Enemy3_16" parent="HiveMind" instance=ExtResource("6_occjl")]
position = Vector2(236, 172)

[node name="Limits" type="Node" parent="."]

[node name="Limits" parent="Limits" instance=ExtResource("3_ts8eo")]
position = Vector2(-11, 600)

[node name="Limits2" parent="Limits" instance=ExtResource("3_ts8eo")]
position = Vector2(493, 600)

[node name="Shelters" type="Node" parent="."]

[node name="Shelter" parent="Shelters" instance=ExtResource("8_bcmb8")]
position = Vector2(85, 517)

[node name="Shelter2" parent="Shelters" instance=ExtResource("8_bcmb8")]
position = Vector2(209, 516)

[node name="Shelter3" parent="Shelters" instance=ExtResource("8_bcmb8")]
position = Vector2(330, 515)

[node name="Shelter4" parent="Shelters" instance=ExtResource("8_bcmb8")]
position = Vector2(442, 514)

[node name="MothershipPoint" type="Marker2D" parent="."]
position = Vector2(-11, 37)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(241, 596)

[node name="StartTimer" type="Timer" parent="."]
process_mode = 2
wait_time = 3.0
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LiveDisplay" type="Node" parent="Control"]

[node name="Lives1" type="Sprite2D" parent="Control/LiveDisplay"]
modulate = Color(0.258824, 1, 0.14902, 1)
position = Vector2(363, 625)
texture = ExtResource("10_8oj67")

[node name="Lives2" type="Sprite2D" parent="Control/LiveDisplay"]
modulate = Color(0.258824, 1, 0.14902, 1)
position = Vector2(397, 625)
texture = ExtResource("10_8oj67")

[node name="Lives3" type="Sprite2D" parent="Control/LiveDisplay"]
modulate = Color(0.258824, 1, 0.14902, 1)
position = Vector2(431, 625)
texture = ExtResource("10_8oj67")

[node name="GetReady" type="Label" parent="Control"]
modulate = Color(1, 1, 0.439216, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 138.0
offset_top = 276.5
offset_right = 322.0
offset_bottom = 307.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("9_bdfl0")
theme_override_font_sizes/font_size = 30
text = "GET READY!"
uppercase = true

[node name="Score" type="Label" parent="Control"]
offset_left = 7.0
offset_top = 620.0
offset_right = 69.0
offset_bottom = 645.0
theme_override_fonts/font = ExtResource("9_bdfl0")
text = "Score:"

[node name="Label" type="Label" parent="Control"]
offset_left = 297.0
offset_top = 620.0
offset_right = 359.0
offset_bottom = 645.0
theme_override_fonts/font = ExtResource("9_bdfl0")
text = "Lives:"

[connection signal="player_death" from="Player" to="." method="_on_player_player_death"]
